fixed lightbox vertical-alignment
git-svn-id: https://svn.kuali.org/repos/student/trunk@17642 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-lum/ks-lum-ui/src/main/resources/org/kuali/student/lum/ui/theme/standard/public/css/LumMain.css
+++ b/ks-lum/ks-lum-ui/src/main/resources/org/kuali/student/lum/ui/theme/standard/public/css/LumMain.css
@@ -549,7 +549,5 @@ padding:10px
 	width: 130px;
 	text-align:left
 }
-.ks-lightbox-contentRow td {
-	vertical-align: bottom;
-}
+
 
